syntax = "proto3";

package co.za.planet;

service PlanetAdmin {
  rpc CreatePlanet (CreatePlanetRequest) returns (CreatePlanetResponse);

  rpc CreateSector (CreateSectorRequest) returns (CreateSectorResponse);

  rpc CreateCargoType (CreateCargoTypeRequest) returns (CreateCargoTypeResponse);

  rpc CreateStarship (CreateStarshipRequest) returns (CreateStarshipResponse);
}

enum StatusCode {
  STATUS_CODE_UNSPECIFIED = 0;
  STATUS_CODE_SUCCESS = 1;
  STATUS_CODE_VALIDATION_ERROR = 2;
  STATUS_CODE_NOT_FOUND = 3;
  STATUS_CODE_ALREADY_EXISTS = 4;
  STATUS_CODE_PERMISSIONS_DENIED = 5;
  STATUS_CODE_INTERNAL_ERROR = 6;
}

message ResponseMessage {
  StatusCode status_code = 1;
  string status_message = 2;
  map<string, string> error_fields = 3;
}

message  CreatePlanetRequest {
 string planet_name = 1;
 int64 sector_id = 2;

 // optional scarce cargo, as a planet may be stable to not have any scarcity
 optional int64 scarce_cargo_id = 3;
}

message  CreatePlanetResponse {
  ResponseMessage message = 1;
  int64 planet_id = 2;
}

message CreateSectorRequest {
  string sector_name = 1;
}

message CreateSectorResponse {
  ResponseMessage message = 1;
  int64 sector_id = 2;
}

message CreateCargoTypeRequest {
  string cargo_name = 1;
}
message CreateCargoTypeResponse {
  ResponseMessage message = 1;
  int64 cargo_type_id = 2;
}

message CreateStarshipRequest {
  string starship_name = 1;
  string starship_model = 2;
  int64 planet_id = 3;
}
message CreateStarshipResponse {
  ResponseMessage message = 1;
  int64 starship_id = 2;
}
